# swagger.json
@@ -291,6 +291,92 @@
         }
       }
     },
+    "/api/course/carousel-courses/": {
+      "get": {
+        "name": "Get Courses",
+        "summary": "Get Course For Carousel",
+        "consumes": [
+          "application/json"
+        ],
+        "responses": {
+          "200": {
+            "description": "Success",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "type": "object",
+                    "properties": {
+                      "course": {
+                        "title": "type:string",
+                        "description": "type:string",
+                        "numberOfLessons": "type:integer"
+                      }
+                    }
+                  }
+                },
+                "example": [
+                  {
+                    "title": "React",
+                    "description": "Some description",
+                    "numberOfLessons": 44
+                  },
+                  {
+                    "title": "React",
+                    "description": "Some description",
+                    "numberOfLessons": 44
+                  },
+                  {
+                    "title": "React",
+                    "description": "Some description",
+                    "numberOfLessons": 44
+                  },
+                  {
+                    "title": "React",
+                    "description": "Some description",
+                    "numberOfLessons": 44
+                  },
+                  {
+                    "title": "React",
+                    "description": "Some description",
+                    "numberOfLessons": 44
+                  },
+                  {
+                    "title": "React",
+                    "description": "Some description",
+                    "numberOfLessons": 44
+                  },
+                  {
+                    "title": "React",
+                    "description": "Some description",
+                    "numberOfLessons": 44
+                  },
+                  {
+                    "title": "React",
+                    "description": "Some description",
+                    "numberOfLessons": 44
+                  },
+                  {
+                    "title": "React",
+                    "description": "Some description",
+                    "numberOfLessons": 44
+                  },
+                  {
+                    "title": "React",
+                    "description": "Some description",
+                    "numberOfLessons": 44
+                  }
+                ]
+              }
+            }
+          },
+          "400": {
+            "description": "Courses not found."
+          }
+        }
+      }
+    },
     "/api/profile/public": {
       "get": {
         "security": [
